--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>git</title>
 </head>
 
 <body>
-
+  <img src="./img/09412eb7e1c9f322e1cd8214db71059c.png" alt="">
+  <img src="./img/37025bdf88eb8e2b61b411a6d49f9a97.jfif" alt="">
 </body>
 
 </html>
